[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["silksofthesoul <silksofthesoul@yandex.ru>"]
description = "Test webAssambly"
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
